--- a/mygift/src/main/res/layout/activity_main.xml
+++ b/mygift/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
         android:checkedButton="@+id/main_guide_rbt"
+        android:orientation="horizontal"
         android:padding="5dp">
 
         <RadioButton
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:onClick="onClick"
             android:text="指南"
-            android:textColor="#9D9F9F" />
+            android:textColor="@color/main_rb_text_color" />
 
         <RadioButton
             android:id="@+id/main_hot_rbt"
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:onClick="onClick"
             android:text="热门"
-            android:textColor="#9D9F9F" />
+            android:textColor="@color/main_rb_text_color" />
 
         <RadioButton
             android:id="@+id/main_category_rbt"
@@ -61,7 +61,7 @@
             android:gravity="center"
             android:onClick="onClick"
             android:text="分类"
-            android:textColor="#9D9F9F" />
+            android:textColor="@color/main_rb_text_color" />
 
         <RadioButton
             android:id="@+id/main_my_rbt"
@@ -73,6 +73,6 @@
             android:gravity="center"
             android:onClick="onClick"
             android:text="我的"
-            android:textColor="#9D9F9F" />
+            android:textColor="@color/main_rb_text_color" />
     </RadioGroup>
 </RelativeLayout>
