--- a/mygift/src/main/res/layout/fragment_guide.xml
+++ b/mygift/src/main/res/layout/fragment_guide.xml
@@ -4,10 +4,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.GuideFragment">
 
+    <TextView
+        android:id="@+id/guide_view"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:text="礼物说"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_menu_search" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/guide_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="60dp" />
+        android:layout_height="40dp"
+        android:layout_below="@+id/guide_view" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/guide_view_pager"
