--- a/mygift/src/main/res/layout/guide_list_header.xml
+++ b/mygift/src/main/res/layout/guide_list_header.xml
@@ -7,8 +7,12 @@
     <com.bigkoo.convenientbanner.ConvenientBanner
         android:id="@+id/guide_list_header_banner"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="160dp"
         app:canLoop="true"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/guide_list_header_recyleview"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
 </LinearLayout>
