--- a/mygift/src/main/res/values/colors.xml
+++ b/mygift/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF4E64</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#9D9F9F</color>
+    <color name="grayView">#eee</color>
 </resources>
